Bug 434045 - Systemsettings crashes "org.kde.systemsettings.app: Error loading plugin"
Summary: Systemsettings crashes "org.kde.systemsettings.app: Error loading plugin"
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 434048 434083 434086 434138 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-03-06 07:09 UTC by Tony
Modified: 2021-03-10 11:25 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (10.45 KB, text/plain)
2021-03-09 12:29 UTC, Oded Arbel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2021-03-06 07:09:04 UTC
Application: systemsettings5 (5.21.80)

Qt Version: 5.15.2
Frameworks Version: 5.80.0
Operating System: Linux 5.11.3-xanmod1-cacule x86_64
Windowing System: X11
Drkonqi Version: 5.21.80
Distribution: "openSUSE Tumbleweed"

-- Information about the crash:
Running it from a terminal shows : "org.kde.systemsettings.app: Error loading plugin"

Trying to launch it from krunner or any individual kcm (eg: krunner > icons) will crash it too.

Using kcmshell5 from a terminal to launch kcms works fine.

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings (systemsettings5), signal: Segmentation fault
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7f422751d500 (LWP 9000))]
[KCrash Handler]
#6  0x00007f42263984d4 in KConfigGroup::sync (this=0x55b947835768) at /usr/src/debug/kconfig-5.80.0git.20210301T142846~36f12b2-ku.8.1.x86_64/src/core/kconfiggroup.cpp:599
#7  0x00007f41d0951e90 in SidebarMode::~SidebarMode (this=<optimized out>, this=<optimized out>) at /usr/src/debug/systemsettings5-5.21.80git.20210304T140718~1ec8b707-ku.12.1.x86_64/sidebar/SidebarMode.cpp:318
#8  0x00007f41d0951f39 in SidebarMode::~SidebarMode (this=<optimized out>, this=<optimized out>) at /usr/src/debug/systemsettings5-5.21.80git.20210304T140718~1ec8b707-ku.12.1.x86_64/sidebar/SidebarMode.cpp:320
#9  0x000055b947394449 in KPluginFactory::create<BaseMode> (args=..., parent=0x55b9475c43a0, this=0x55b9478c1930) at /usr/include/KF5/KCoreAddons/kpluginfactory.h:775
#10 SettingsBase::initApplication (this=0x55b9475c43a0) at /usr/src/debug/systemsettings5-5.21.80git.20210304T140718~1ec8b707-ku.12.1.x86_64/app/SettingsBase.cpp:142
#11 0x00007f422600b351 in QObject::event (this=0x55b9475c43a0, e=0x55b9477ffff0) at kernel/qobject.cpp:1314
#12 0x00007f4227860909 in KXmlGuiWindow::event (this=0x55b9475c43a0, ev=0x55b9477ffff0) at /usr/src/debug/kxmlgui-5.80.0git.20210305T140912~23dfc4b-ku.6.1.x86_64/src/kxmlguiwindow.cpp:109
#13 0x00007f4226c954ff in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55b9475c43a0, e=0x55b9477ffff0) at kernel/qapplication.cpp:3632
#14 0x00007f4225fdf32a in QCoreApplication::notifyInternal2 (receiver=0x55b9475c43a0, event=0x55b9477ffff0) at kernel/qcoreapplication.cpp:1063
#15 0x00007f4225fe1d61 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55b9473a66f0) at kernel/qcoreapplication.cpp:1817
#16 0x00007f4226037233 in postEventSourceDispatch (s=s@entry=0x55b9474c7f50) at kernel/qeventdispatcher_glib.cpp:277
#17 0x00007f4223b54f57 in g_main_dispatch (context=0x7f421c005000) at ../glib/gmain.c:3325
#18 g_main_context_dispatch (context=0x7f421c005000) at ../glib/gmain.c:4043
#19 0x00007f4223b552d8 in g_main_context_iterate (context=context@entry=0x7f421c005000, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4119
#20 0x00007f4223b5538f in g_main_context_iteration (context=0x7f421c005000, may_block=may_block@entry=1) at ../glib/gmain.c:4184
#21 0x00007f42260368bf in QEventDispatcherGlib::processEvents (this=0x55b9474d5f20, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#22 0x00007f4225fddceb in QEventLoop::exec (this=this@entry=0x7ffc2dc19120, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#23 0x00007f4225fe5f60 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#24 0x00007f422653e35c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1867
#25 0x00007f4226c95475 in QApplication::exec () at kernel/qapplication.cpp:2824
#26 0x000055b94738c47a in main (argc=<optimized out>, argv=0x7ffc2dc19240) at /usr/src/debug/systemsettings5-5.21.80git.20210304T140718~1ec8b707-ku.12.1.x86_64/app/main.cpp:222
[Inferior 1 (process 9000) detached]

Possible duplicates by query: bug 225025, bug 187894, bug 182494, bug 181571, bug 176961.

Reported using DrKonqi
Comment 2 Thiago Sueto 2021-03-07 00:40:37 UTC
I can reproduce, also on openSUSE Krypton.
Only things different in my setup: kernel-vanilla, Wayland.
This crash seems to happen to all KCMs.
Using kcmshell5 indeed works fine.
Comment 3 David Edmundson 2021-03-07 01:05:39 UTC
*** Bug 434083 has been marked as a duplicate of this bug. ***
Comment 4 David Edmundson 2021-03-07 01:05:42 UTC
*** Bug 434048 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2021-03-07 10:36:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/56
Comment 6 Nicolas Fella 2021-03-07 12:41:17 UTC
*** Bug 434086 has been marked as a duplicate of this bug. ***
Comment 7 Nicolas Fella 2021-03-07 14:05:10 UTC
Git commit dbf9834bedb064a3140e1921a47f985a3706a20d by Nicolas Fella.
Committed on 07/03/2021 at 10:33.
Pushed by nicolasfella into branch 'master'.

Make systemsettingsview shared again

2b61b00dd33f9363c39a8d93642187b8759b621c made it static but that causes
symbols to be loaded into the app twice, which is brittle.

Partially reverts 2b61b00dd33f9363c39a8d93642187b8759b621c.

M  +1    -0    CMakeLists.txt
M  +3    -1    core/BaseData.h
M  +3    -1    core/BaseMode.h
M  +5    -1    core/CMakeLists.txt
M  +3    -1    core/MenuItem.h
M  +3    -1    core/MenuModel.h
M  +3    -1    core/MenuProxyModel.h
M  +3    -1    core/ModuleView.h

https://invent.kde.org/plasma/systemsettings/commit/dbf9834bedb064a3140e1921a47f985a3706a20d
Comment 8 Nicolas Fella 2021-03-08 12:44:32 UTC
*** Bug 434138 has been marked as a duplicate of this bug. ***
Comment 9 Oded Arbel 2021-03-09 12:29:41 UTC
Created attachment 136524 [details]
New crash information added by DrKonqi

systemsettings5 (5.21.80) using Qt 5.15.2

- What I was doing when the application crashed: Started system settings.

When running from terminal, I see these messages:

kf.coreaddons: Checking for plugins in ("/usr/lib/x86_64-linux-gnu/qt5/plugins/systemsettingsview/", "/usr/bin/systemsettingsview/")
org.kde.systemsettings.app: Error loading plugin
KCrash: crashing... crashRecursionCounter = 2

-- Backtrace (Reduced):
#4  0x00007fa442c06268 in KConfigGroup::sync() () from /usr/lib/x86_64-linux-gnu/libKF5ConfigCore.so.5
#5  0x00007fa428498cb8 in SidebarMode::~SidebarMode (this=0x560788da49f0, __in_chrg=<optimized out>) at ./sidebar/SidebarMode.cpp:318
#6  0x00007fa428498d5d in SidebarMode::~SidebarMode (this=0x560788da49f0, __in_chrg=<optimized out>) at ./sidebar/SidebarMode.cpp:316
#7  0x00005607872bb032 in KPluginFactory::create<BaseMode> (args=..., parent=0x5607889efeb0, this=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h:519
#8  SettingsBase::initApplication (this=0x5607889efeb0) at ./app/SettingsBase.cpp:142
Comment 10 Patrick Silva 2021-03-10 11:25:31 UTC
Both System Settings and kinfocenter are still crashing at startup on neon unstable.

Application: System Settings (systemsettings5), signal: Segmentation fault
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7f602b8948c0 (LWP 1323))]
[New LWP 1325]
[New LWP 1326]
[New LWP 1327]
[New LWP 1328]
[New LWP 1329]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007f602facfaff in __GI___poll (fds=fds@entry=0x7ffc5e0bc768, nfds=nfds@entry=1, timeout=timeout@entry=1000) at ../sysdeps/unix/sysv/linux/poll.c:29

Thread 6 (Thread 0x7f60227fc700 (LWP 1329)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x56087facab18) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x56087facaac8, cond=0x56087facaaf0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x56087facaaf0, mutex=0x56087facaac8) at pthread_cond_wait.c:638
#3  0x00007f6028df6e6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007f6028df6a6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007f602e669609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f602fadc293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f6022ffd700 (LWP 1328)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x56087facab18) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x56087facaac8, cond=0x56087facaaf0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x56087facaaf0, mutex=0x56087facaac8) at pthread_cond_wait.c:638
#3  0x00007f6028df6e6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007f6028df6a6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007f602e669609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f602fadc293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f60237fe700 (LWP 1327)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x56087facab18) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x56087facaac8, cond=0x56087facaaf0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x56087facaaf0, mutex=0x56087facaac8) at pthread_cond_wait.c:638
#3  0x00007f6028df6e6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007f6028df6a6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007f602e669609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f602fadc293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f6023fff700 (LWP 1326)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x56087facab18) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x56087facaac8, cond=0x56087facaaf0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x56087facaaf0, mutex=0x56087facaac8) at pthread_cond_wait.c:638
#3  0x00007f6028df6e6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007f6028df6a6b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007f602e669609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f602fadc293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f602ac25700 (LWP 1325)):
#0  g_source_ref (source=0x7f6024005060) at ../../../glib/gmain.c:2166
#1  0x00007f602dd57328 in g_source_iter_next (iter=iter@entry=0x7f602ac24af0, source=source@entry=0x7f602ac24ae8) at ../../../glib/gmain.c:1046
#2  0x00007f602dd5882b in g_main_context_prepare (context=context@entry=0x7f6024000c20, priority=priority@entry=0x7f602ac24b70) at ../../../glib/gmain.c:3597
#3  0x00007f602dd5929b in g_main_context_iterate (context=context@entry=0x7f6024000c20, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4027
#4  0x00007f602dd594a3 in g_main_context_iteration (context=0x7f6024000c20, may_block=may_block@entry=1) at ../../../glib/gmain.c:4108
#5  0x00007f60301e9fbb in QEventDispatcherGlib::processEvents (this=0x7f6024000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f603018e1ab in QEventLoop::exec (this=this@entry=0x7f602ac24cb0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#7  0x00007f602ffa8a12 in QThread::exec (this=this@entry=0x7f602ef3dd80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#8  0x00007f602eeb9f4b in QDBusConnectionManager::run (this=0x7f602ef3dd80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:179
#9  0x00007f602ffa9bac in QThreadPrivate::start (arg=0x7f602ef3dd80 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:329
#10 0x00007f602e669609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#11 0x00007f602fadc293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f602b8948c0 (LWP 1323)):
[KCrash Handler]
#6  0x00007f6030516268 in KConfigGroup::sync() () from /lib/x86_64-linux-gnu/libKF5ConfigCore.so.5
#7  0x00007f6028374cb8 in SidebarMode::~SidebarMode (this=0x56087fba6b20, __in_chrg=<optimized out>) at ./sidebar/SidebarMode.cpp:318
#8  0x00007f6028374d5d in SidebarMode::~SidebarMode (this=0x56087fba6b20, __in_chrg=<optimized out>) at ./sidebar/SidebarMode.cpp:316
#9  0x000056087e225032 in KPluginFactory::create<BaseMode> (args=..., parent=0x56087fad7cc0, this=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h:519
#10 SettingsBase::initApplication (this=0x56087fad7cc0) at ./app/SettingsBase.cpp:142
#11 0x00007f60301bd239 in QObject::event (this=this@entry=0x56087fad7cc0, e=e@entry=0x56087fb2f080) at kernel/qobject.cpp:1314
#12 0x00007f6030dd3bad in QWidget::event (this=this@entry=0x56087fad7cc0, event=event@entry=0x56087fb2f080) at kernel/qwidget.cpp:9080
#13 0x00007f6030eec8c8 in QMainWindow::event (this=0x56087fad7cc0, event=0x56087fb2f080) at widgets/qmainwindow.cpp:1341
#14 0x00007f60319f9c73 in KMainWindow::event(QEvent*) () from /lib/x86_64-linux-gnu/libKF5XmlGui.so.5
#15 0x00007f6031a4513b in KXmlGuiWindow::event(QEvent*) () from /lib/x86_64-linux-gnu/libKF5XmlGui.so.5
#16 0x00007f6030d90dc3 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x56087fad7cc0, e=0x56087fb2f080) at kernel/qapplication.cpp:3632
#17 0x00007f6030d99bb8 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3156
#18 0x00007f603018f69a in QCoreApplication::notifyInternal2 (receiver=0x56087fad7cc0, event=0x56087fb2f080) at ../../include/QtCore/5.15.2/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#19 0x00007f6030191fa1 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x56087f8b76a0) at kernel/qcoreapplication.cpp:1817
#20 0x00007f60301ea947 in postEventSourceDispatch (s=0x56087f8e0fb0) at kernel/qeventdispatcher_glib.cpp:277
#21 0x00007f602dd5917d in g_main_dispatch (context=0x56087f900210) at ../../../glib/gmain.c:3309
#22 g_main_context_dispatch (context=context@entry=0x56087f900210) at ../../../glib/gmain.c:3974
#23 0x00007f602dd59400 in g_main_context_iterate (context=context@entry=0x56087f900210, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:4047
#24 0x00007f602dd594a3 in g_main_context_iteration (context=0x56087f900210, may_block=may_block@entry=1) at ../../../glib/gmain.c:4108
#25 0x00007f60301e9fa2 in QEventDispatcherGlib::processEvents (this=0x56087f8de270, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#26 0x00007f603018e1ab in QEventLoop::exec (this=this@entry=0x7ffc5e0bd7c0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#27 0x00007f6030196354 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#28 0x000056087e220392 in main (argc=<optimized out>, argv=<optimized out>) at ./app/main.cpp:222
[Inferior 1 (process 1323) detached]