Make systemsettingsview shared again

2b61b00dd33f9363c39a8d93642187b8759b621c made it static but that causes
symbols to be loaded into the app twice, which is brittle.

Partially reverts 2b61b00dd33f9363c39a8d93642187b8759b621c.

BUG: 434045