core/BaseData.h
@@ -22,6 +22,8 @@
 
 #include <QObject>
 
+#include "systemsettingsview_export.h"
+
 class QString;
 class MenuItem;
 class KConfigGroup;
@@ -34,7 +36,7 @@ class KConfigGroup;
  *
  * @author Ben Cooksley <bcooksley@kde.org>
  */
-class BaseData : public QObject
+class SYSTEMSETTINGSVIEW_EXPORT BaseData : public QObject
 {
     Q_OBJECT
     Q_DISABLE_COPY(BaseData)
