core/MenuProxyModel.h
@@ -23,6 +23,8 @@
 
 #include <KCategorizedSortFilterProxyModel>
 
+#include "systemsettingsview_export.h"
+
 /**
  * @brief Provides a filter model for MenuModel
  *
@@ -35,7 +37,7 @@
  * @author Will Stephenson <wstephenson@kde.org>
  * @author Ben Cooksley <bcooksley@kde.org>
  */
-class MenuProxyModel : public KCategorizedSortFilterProxyModel
+class SYSTEMSETTINGSVIEW_EXPORT MenuProxyModel : public KCategorizedSortFilterProxyModel
 {
     Q_OBJECT
 
